# Manhattan

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.hpp  Color.hpp  Hittable.hpp  Image.cpp  Image.hpp  Integrator.hpp  Interval.cpp  Interval.hpp  Manhattan.hpp  Materials.hpp  RNG.cpp  RNG.hpp  Ray.hpp  Vector3.hpp  main.cpp  main.py  path.py  pt.py  window.hpp
pt/: pt.cpp  pt.hpp
scenes/spaceship/: scene.xml
